--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -1,3 +1,12 @@
+/* base style*/
+* {
+    box-sizing: border-box;
+ }
+ 
+h1 {
+    margin-bottom: 15px;
+}
+
 p {
     border: 1px solid black;
     background-color: #A52A2A;
@@ -7,7 +16,7 @@ p {
     margin-left: auto;
     font-family: Helvetica;
     color: white;
-  }
+}
 
 /* the responsive framework - 100% browser width */
 .row {
@@ -42,7 +51,7 @@ p {
 /* the small screen style */
 @media (min-width: 768px) and (max-width: 991px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
-        float: left;
+        floa
         border: 1px solid greenyellow;
     }
 }
