--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -2,7 +2,7 @@
 * {
     box-sizing: border-box;
  }
- 
+
 h1 {
     margin-bottom: 15px;
 }
@@ -51,7 +51,7 @@ p {
 /* the small screen style */
 @media (min-width: 768px) and (max-width: 991px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
-        floa
+        float: left;
         border: 1px solid greenyellow;
     }
 }
