--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -29,6 +29,7 @@ p {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
         border: 1px solid greenyellow;
+        margin: 0px;
     }
     .col-lg-1 {
         width: 33%;
