--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -9,8 +9,12 @@ h1 {
 }
 
 h3 {
+    margin: 10px;
     text-align: right;
     padding-right: 15px;
+    float: none;
+    border: 3px solid blueviolet;
+    text-align: center;
 }
 
 p {
@@ -42,7 +46,7 @@ p {
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
-        border: 85px solid greenyellow;
+        border: 15px solid greenyellow;
         margin: 0px;
     }
     .col-lg-1 {
