--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -9,12 +9,11 @@ h1 {
 }
 
 h3 {
-    margin: 10px;
+    margin: auto;
     text-align: right;
     padding-right: 15px;
     float: none;
     border: 3px solid blueviolet;
-    text-align: center;
 }
 
 p {
