--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -9,11 +9,11 @@ h1 {
 }
 
 h3 {
-    margin: auto;
-    text-align: right;
-    padding-right: 15px;
-    float: none;
     border: 3px solid blueviolet;
+    width: 120px;
+    margin-left: auto;
+    right: 0px;
+    text-align: center;
 }
 
 p {
