--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -1,10 +1,11 @@
 /* base style*/
 * {
     box-sizing: border-box;
+    margin: 10px;
  }
 
 h1 {
-    margin-bottom: 15px;
+    margin-bottom: 3%px;
     text-align: center;
 }
 
@@ -21,25 +22,17 @@ h3 {
 p {
     border: 1px solid black;
     background-color: #A52A2A;
-    width: 90%;
-    height: 150px;
+    width: 100%;
+    height: 80px;
+    padding: 8px;
     margin-right: auto;
     margin-left: auto;
     font-family: Helvetica;
     color: white;
 }
 
-.backtext {
+.textbutmorecomplicated {
  background-color: aquamarine;
-}
-
-.honey {
-}
-
-.soap {
-}
-
-.chapstick {
 }
 
 /* the responsive framework - 100% browser width */
@@ -51,8 +44,6 @@ p {
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
-        border: 15px solid greenyellow;
-        margin: 0px;
     }
     .col-lg-1 {
         width: 33%;
@@ -69,7 +60,7 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
-        border: 1px solid greenyellow;
+        margin: auto;
     }
     .col-lg-1 {
         width: 50%;
@@ -86,7 +77,7 @@ p {
 @media (max-width: 767px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
-        border: 1px solid greenyellow;
+        margin: auto;
         width: 100%;
     }
 }
