--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -1,7 +1,12 @@
 /* base style*/
 * {
     box-sizing: border-box;
-    margin: 10px;
+    width: 100%;
+ }
+
+ body {
+    margin: 0;
+    padding: 0;
  }
 
 h1 {
@@ -10,29 +15,25 @@ h1 {
 }
 
 h3 {
-    border: 3px solid blueviolet;
-    height: 30px;
-    width: 120px;
+    height: 25px;
+    width: 95px;
     margin-left: auto;
     margin-top: auto;
     text-align: center;
     background-color: antiquewhite;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
 p {
-    border: 1px solid black;
-    background-color: #A52A2A;
-    width: 100%;
-    height: 80px;
-    padding: 8px;
-    margin-right: auto;
-    margin-left: auto;
+    border: 2%;
     font-family: Helvetica;
     color: white;
 }
 
 .textbutmorecomplicated {
  background-color: aquamarine;
+ border: 2px solid black;
 }
 
 /* the responsive framework - 100% browser width */
@@ -44,15 +45,16 @@ p {
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
+        margin: 5px;
     }
     .col-lg-1 {
-        width: 33%;
+        width: 33.33%;
     }
     .col-lg-2 {
-        width: 33%;
+        width: 33.33%;
     }
     .col-lg-3 {
-        width: 33%;
+        width: 33.33%;
     }
 }
 
@@ -60,7 +62,7 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
-        margin: auto;
+        margin: 10px;
     }
     .col-lg-1 {
         width: 50%;
@@ -77,7 +79,7 @@ p {
 @media (max-width: 767px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
-        margin: auto;
         width: 100%;
+        margin: 10px;
     }
 }
