--- a/module2_solution/css/skittles.css
+++ b/module2_solution/css/skittles.css
@@ -1,7 +1,6 @@
 /* base style*/
 * {
     box-sizing: border-box;
-    width: 100%;
  }
 
  body {
@@ -29,11 +28,17 @@ p {
     border: 2%;
     font-family: Helvetica;
     color: white;
+    padding: 10px;
+    
 }
 
 .textbutmorecomplicated {
  background-color: aquamarine;
  border: 2px solid black;
+}
+
+.ddiv {
+    margin: 10px;
 }
 
 /* the responsive framework - 100% browser width */
@@ -45,16 +50,8 @@ p {
 @media (min-width: 992px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
+        width: 33%;
         margin: 5px;
-    }
-    .col-lg-1 {
-        width: 33.33%;
-    }
-    .col-lg-2 {
-        width: 33.33%;
-    }
-    .col-lg-3 {
-        width: 33.33%;
     }
 }
 
@@ -62,7 +59,6 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
-        margin: 10px;
     }
     .col-lg-1 {
         width: 50%;
@@ -80,6 +76,5 @@ p {
     .col-lg-1, .col-lg-2, .col-lg-3 {
         float: left;
         width: 100%;
-        margin: 10px;
     }
 }
