--- a/module2_solution/css/s2.css
+++ b/module2_solution/css/s2.css
@@ -6,6 +6,12 @@
     margin-bottom: 15px;
     text-align: center;
   }
+  h2 {
+    margin-left: auto;
+    margin-right: 2%;
+    margin-top: 2%;
+    text-align: right;
+  }
   
   p {
     border: 1px solid black;
